--- a/TnTComponents/Form/TnTInputCheckbox.razor.scss
+++ b/TnTComponents/Form/TnTInputCheckbox.razor.scss
@@ -1,10 +1,6 @@
-﻿@use '../Styles/_Variables/_colors.scss' as colors;
+﻿@use '_inputBase.scss' as base;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
-
-$error-color: var(--tnt-input-error-color);
-$text-color: var(--tnt-input-text-color);
-$tint-color: var(--tnt-input-tint-color);
-$background-color: var(--tnt-input-background-color);
+@use '../Styles/_Variables/_colors.scss' as colors;
 
 .tnt-input {
     grid-template-areas: "checkbox";
@@ -58,7 +54,7 @@ $background-color: var(--tnt-input-background-color);
         grid-area: label;
         justify-self: center;
         align-self: center;
-        color: $text-color;
+        color: base.$text-color;
 
         @include typescale.tnt-body-large;
     }
@@ -81,31 +77,25 @@ $background-color: var(--tnt-input-background-color);
     }
 
     ::deep {
-        .tnt-start-icon {
-            grid-area: start-icon;
-        }
+        @include base.default-icon;
 
-        .tnt-end-icon {
-            grid-area: end-icon;
-        }
-
-        .tnt-start-icon, .tnt-end-icon {
-            align-self: center;
-            justify-self: center;
-        }
-
-        .tnt-validation-message {
+        .tnt-supporting-text {
             position: absolute;
             bottom: -14px;
             left: 16px;
             white-space: nowrap;
+            color: base.$text-color;
             @include typescale.tnt-body-small;
         }
 
         @for $i from 1 through 5 {
-            *:nth-child(#{$i} of .tnt-validation-message) {
+            *:nth-child(#{$i} of .tnt-supporting-text) {
                 transform: translateY(calc(12px * ($i - 1))) !important;
             }
+        }
+
+        .tnt-validation-message {
+            color: base.$error-color;
         }
     }
 
@@ -139,7 +129,7 @@ $background-color: var(--tnt-input-background-color);
         grid-area: checkbox;
         height: 18px;
         width: 18px;
-        border: 2px solid $text-color;
+        border: 2px solid base.$text-color;
         border-radius: 4px;
         background-color: transparent;
         transition: 250ms ease-in-out;
@@ -153,8 +143,8 @@ $background-color: var(--tnt-input-background-color);
         grid-area: checkbox;
         height: 14px;
         width: 7px;
-        border-right: 2px solid $background-color;
-        border-bottom: 3px solid $background-color;
+        border-right: 2px solid base.$background-color;
+        border-bottom: 3px solid base.$background-color;
         background-color: transparent;
         transition: 250ms ease-in-out;
         align-self: center;
@@ -165,8 +155,8 @@ $background-color: var(--tnt-input-background-color);
 
     &:has(input:checked) {
         &:before {
-            background-color: $tint-color;
-            border-color: $tint-color;
+            background-color: base.$tint-color;
+            border-color: base.$tint-color;
         }
 
         &:after {
@@ -178,30 +168,30 @@ $background-color: var(--tnt-input-background-color);
 
         &:has(input:checked) {
             &:before {
-                background-color: $error-color;
-                border-color: $error-color;
+                background-color: base.$error-color;
+                border-color: base.$error-color;
             }
         }
 
         &:not(:has(input:checked)) {
             &:before {
-                border-color: $error-color;
+                border-color: base.$error-color;
             }
         }
 
         &:hover {
             .tnt-checkbox-overlay {
-                background-color: color-mix(in srgb, $error-color 20%, transparent);
+                background-color: color-mix(in srgb, base.$error-color 20%, transparent);
             }
         }
 
         .tnt-label {
-            color: $error-color;
+            color: base.$error-color;
         }
 
         ::deep {
             .tnt-end-icon {
-                color: $error-color;
+                color: base.$error-color;
             }
         }
     }
