--- a/TnTComponents/Form/TnTInputTextArea.razor.scss
+++ b/TnTComponents/Form/TnTInputTextArea.razor.scss
@@ -1,10 +1,5 @@
-﻿@use '../Styles/_Variables/_colors.scss' as colors;
-@use '../Styles/_Variables/_typescale.scss' as typescale;
-
-$error-color: var(--tnt-input-error-color);
-$text-color: var(--tnt-input-text-color);
-$tint-color: var(--tnt-input-tint-color);
-$background-color: var(--tnt-input-background-color);
+﻿@use '_inputBase.scss' as base;
+@use '../Styles/_Variables/_colors.scss' as colors;
 
 .tnt-input {
     position: relative;
@@ -15,22 +10,14 @@ $background-color: var(--tnt-input-background-color);
     -moz-box-sizing: border-box;
     grid-template-areas: "pad1 text pad2";
     grid-template-columns: 16px 1fr 16px;
-    caret-color: $tint-color;
+    caret-color: base.$tint-color;
     cursor: text;
-    color: $text-color;
+    color: base.$text-color;
     transition: 250ms ease-in-out;
     margin-bottom: 18px;
     grid-template-rows: auto;
 
-    .tnt-label {
-        position: absolute;
-        transition: 250ms ease-in-out;
-        box-sizing: border-box;
-        grid-area: text;
-        align-self: center;
-        z-index: 1;
-        @include typescale.tnt-body-large;
-    }
+    @include base.tnt-label;
 
 
     &:has(.tnt-start-icon):has(.tnt-end-icon) {
@@ -48,124 +35,25 @@ $background-color: var(--tnt-input-background-color);
         grid-template-columns: 16px 1fr 16px 24px 12px;
     }
 
-    &:has(input[readonly]) {
-        pointer-events: none;
-        opacity: 0.7;
-    }
-
-    &.tnt-disabled {
-        pointer-events: none;
-        opacity: 0.5 !important;
-        user-select: none;
-    }
+    @include base.disabled-and-readonly;
 
     ::deep {
         textarea {
-            grid-area: text;
-            box-sizing: border-box;
-            appearance: none;
-            border: none;
-            outline: none;
-            background-color: transparent;
-            color: inherit;
-            caret-color: inherit;
-            height: fit-content;
-            width: 100%;
-            align-self: center;
-            transition: 250ms ease-in-out;
-            padding: 2px 0;
+            @include base.default-input;
             resize: vertical;
-            @include typescale.tnt-body-large;
-
-            &:placeholder {
-                opacity: 0.5;
-            }
-
-            &::-webkit-autofill,
-            &::-webkit-autofill:hover,
-            &::-webkit-autofill:focus,
-            &::-webkit-autofill:active {
-                -webkit-background-clip: text;
-                color: $text-color;
-            }
-
-            &::-webkit-calendar-picker-indicator {
-                border-radius: 50%;
-                background-color: color-mix(in srgb, #ffffff 50%, $background-color);
-            }
         }
 
-        .tnt-start-icon {
-            grid-area: start-icon;
-        }
-
-        .tnt-end-icon {
-            grid-area: end-icon;
-        }
-
-        .tnt-start-icon, .tnt-end-icon {
-            align-self: center;
-            justify-self: center;
-        }
-
-        .tnt-validation-message {
-            position: absolute;
-            top: calc(100% + 4px);
-            left: 16px;
-            width: calc(100% - 32px - 7ch);
-            text-wrap: wrap;
-            @include typescale.tnt-body-small;
-        }
-
-        @for $i from 1 through 5 {
-            *:nth-child(#{$i} of .tnt-validation-message) {
-                transform: translateY(calc(12px * ($i - 1))) !important;
-            }
-        }
+        @include base.default-icon;
+        @include base.supporting-text;
     }
 
-
-    .tnt-input-length {
-        position: absolute;
-        top: calc(100% + 4px);
-        right: 16px;
-        @include typescale.tnt-body-small;
-    }
-
-    &.modified.invalid {
-        outline-color: $error-color;
-
-        &:before, &:after {
-            border-color: $error-color;
-        }
-
-        .tnt-label, .tnt-input-length {
-            color: $error-color;
-        }
-
-        &:has(textarea:focus), &:has(textarea:active) {
-            caret-color: $error-color;
-        }
-
-        ::deep {
-            .tnt-end-icon {
-                color: $error-color;
-            }
-        }
-
-        &.tnt-form-filled {
-            &:after {
-                background-color: $error-color;
-            }
-
-            border-bottom: 1px solid $error-color;
-        }
-    }
+    @include base.tnt-input-length;
+    @include base.invalid(textarea);
 
     &.tnt-form-filled {
         border-bottom: 1px solid colors.$tnt-color-outline-variant;
         border-radius: 4px 4px 0 0;
-        background-color: $background-color;
+        background-color: base.$background-color;
         padding-top: 12px;
 
         &:after {
@@ -182,7 +70,7 @@ $background-color: var(--tnt-input-background-color);
         }
 
         &:hover {
-            background-color: color-mix(in srgb, $tint-color 15%, $background-color);
+            background-color: color-mix(in srgb, base.$tint-color 15%, base.$background-color);
         }
 
         &:has(textarea:focus), &:has(textarea:active) {
@@ -202,7 +90,7 @@ $background-color: var(--tnt-input-background-color);
 
             &:has(textarea:focus), &:has(textarea:active) {
                 .tnt-label {
-                    color: $tint-color;
+                    color: base.$tint-color;
                 }
             }
         }
@@ -221,7 +109,7 @@ $background-color: var(--tnt-input-background-color);
             background-color: transparent;
             border-radius: 4px;
             box-sizing: border-box;
-            border-color: $tint-color;
+            border-color: base.$tint-color;
             border-style: solid;
             border-radius: inherit;
             height: calc(100% + 2px);
@@ -247,7 +135,7 @@ $background-color: var(--tnt-input-background-color);
         }
 
         &:hover {
-            background-color: color-mix(in srgb, $tint-color 15%, transparent);
+            background-color: color-mix(in srgb, base.$tint-color 15%, transparent);
         }
 
         &:has(textarea:focus), &:has(textarea:active) {
@@ -266,7 +154,7 @@ $background-color: var(--tnt-input-background-color);
                     transform-origin: left;
                     align-self: start;
                     transform: scale(0.75) translateY(-38px);
-                    background-color: $background-color;
+                    background-color: base.$background-color;
                     padding: 0 4px;
                 }
 
@@ -279,7 +167,7 @@ $background-color: var(--tnt-input-background-color);
 
             &:has(textarea:focus), &:has(textarea:active) {
                 .tnt-label {
-                    color: $tint-color;
+                    color: base.$tint-color;
                 }
             }
         }
