Refactor label styles in TnTInputBase and _inputBase
- Moved `.tnt-label` styles to be included directly in the mixin in `TnTInputBase.razor.scss` for improved flexibility.
- Added `@include base.disabled-and-readonly;` to apply disabled and readonly styles correctly.
- Modified `@mixin tnt-label` in `_inputBase.scss` to encapsulate label styles within a `.tnt-label` class, enhancing readability and maintainability.

--- a/TnTComponents/Form/_inputBase.scss
+++ b/TnTComponents/Form/_inputBase.scss
@@ -7,13 +7,15 @@ $tint-color: var(--tnt-input-tint-color);
 $background-color: var(--tnt-input-background-color);
 
 @mixin tnt-label($grid-area: text) {
-    position: absolute;
-    transition: 250ms ease-in-out;
-    box-sizing: border-box;
-    grid-area: $grid-area;
-    align-self: center;
-    z-index: 1;
-    @include typescale.tnt-body-large;
+    .tnt-label {
+        position: absolute;
+        transition: 250ms ease-in-out;
+        box-sizing: border-box;
+        grid-area: $grid-area;
+        align-self: center;
+        z-index: 1;
+        @include typescale.tnt-body-large;
+    }
 }
 
 @mixin disabled-and-readonly {
